# Practice-C

./: CMakeLists.txt  makefile_ref.mk
1-100num_queue_inout/: Runfile  inout.c  main.c  main.h  makefile  queue.c
limit_round_queue/: dequeue.c  enqueue.c  initqueue.c  is_full.c  main.c  makefile  print_queue.c  queue.h
linked_list/: linked_list.c  makefile
makefile/: main.c  makefile
pthread/: makefile  pthread.c
queue/: makefile  queue.c
queue_multi_file/: dequeue.c  enqueue.c  initqueue.c  is_empty.c  main.c  makefile  queue.h
randnum_queue_inout/: a.txt  inout.c  main.c  main.h  makefile  queue.c
round_queue_array/: main.c  makefile
round_queue_multi_file/: enqueue.c  initqueue.c  main.c  queue.h
stack/: makefile  queue.c  stack.c
thread_queue_inout/: inout.c  main.c  main.h
